--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node: 18.12.1
+        node: [lts/*]
 
     steps:
       - name: Checkout 🛎
